--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 550px) {
     body {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -9,8 +9,14 @@
     }
 }
 .logos{
-    background-color: #333; /* Cor de fundo do header */
-    color: #fff; /* Cor do texto dentro do header */
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(var(--tmdbDarkBlue), 1);
+    height: 64px;
+    z-index: 1000;
 }
 
 .logos-container {
@@ -18,10 +24,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f0f0f0;
-    padding: 10px;
+    background-color: #ffffff;
 }
 
-.logos img {
-    max-width: 120px;
+.log1 {
+    max-width: 160px;
+    margin: 5px;
+}
+
+.log2 {
+    max-width: 160px;
+    margin: 0%;
 }
